<resources>
    <string name="app_name" translatable="false">TariffCounter</string>
    <string name="google_api_key" translatable="false">AIzaSyBVk8p1J8-PFZ0JHZ0LWDrAoFLPxONU4fs</string>
    <string name="group_link" translatable="false">\"https://vk.com/public131302920\"</string>
    <string name="app_settings">House settings</string>
    <string name="rate_settings">Rate settings</string>
    <string name="service_settings">Service settings</string>
    <string name="text_subsidy_settings">Subsidy settings</string>
    <string name="text_service_provider">Provider settings</string>
    <string name="news">News</string>
    <string name="text_image_house">House image</string>
    <string name="text_delete_service">Delete Service</string>
    <string name="text_settings">Settings</string>
    <string name="hint_house_title">House Title</string>
    <string name="hint_house_region">House Region</string>
    <string name="hint_find_region">Find region</string>
    <string name="hint_city_null">* City, Town, Village</string>
    <string name="hint_city">City, Town, Village</string>
    <string name="hint_find_city">Find city</string>
    <string name="hint_house_street">Street</string>
    <string name="hint_house_number">House №</string>
    <string name="hint_house_building">Building</string>
    <string name="hint_house_apartment">Apartment</string>
    <string name="hint_house_area">Area, m2</string>
    <string name="warning_house_city">Field must not be empty</string>
    <string name="warning_unsaved_data">Save changes first</string>
    <string name="text_delete_house">Delete the house</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_save">Save</string>
    <string name="text_my_house">My House</string>
    <string name="text_house_type_switch">Private House</string>
    <string name="switch_on">Yes</string>
    <string name="switch_off">No</string>
    <string name="text_view_service_type">Service type:</string>
    <string name="text_view_service_type_null">* Service type:</string>
    <string name="text_view_necessary">* required fields</string>
    <string name="hint_service_title">Service Title</string>
    <string name="hint_service_provider_balance">Balance</string>
    <string name="hint_counter">Counter</string>
    <string name="button_service_provider">Provider</string>
    <string name="text_view_rate_unit_type">rate unit:</string>
    <string name="button_tariff_settings">Tariffs</string>
    <string name="button_subsidy_settings">Subsidy</string>
    <string name="warning_tariff_absent">Tariffs are not set!</string>
    <string name="warning_subsidy_absent">Subsidy is not set!</string>
    <string name="service_type_other">Other</string>
    <string name="service_type_electricity_supply">Electricity supply</string>
    <string name="service_type_gas_supply">Gas supply</string>
    <string name="service_type_rent">Rent</string>
    <string name="service_type_heating">Heating</string>
    <string name="service_type_hot_water">Hot water</string>
    <string name="service_type_water_supply">Water supply</string>
    <string name="service_type_water_drainage">Water drainage</string>
    <string name="service_type_garbage_collection">Garbage collection</string>
    <string-array name="service_type_spinner_array">
        <item> </item>
        <item>@string/service_type_other</item>
        <item>@string/service_type_electricity_supply</item>
        <item>@string/service_type_gas_supply</item>
        <item>@string/service_type_rent</item>
        <item>@string/service_type_heating</item>
        <item>@string/service_type_hot_water</item>
        <item>@string/service_type_water_supply</item>
        <item>@string/service_type_water_drainage</item>
        <item>@string/service_type_garbage_collection</item>
    </string-array>
    <string name="rate_unit_absent">absent</string>
    <string name="rate_unit_m2">m2</string>
    <string name="rate_unit_m3">m3</string>
    <string name="rate_unit_kW_h">kW*h</string>
    <string name="rate_unit_Gcal">Gcal</string>
    <string-array name="rate_unit_spinner_array">
        <item>@string/rate_unit_absent</item>
        <item>@string/rate_unit_m2</item>
        <item>@string/rate_unit_m3</item>
        <item>@string/rate_unit_kW_h</item>
        <item>@string/rate_unit_Gcal</item>
    </string-array>
    <string name="text_tariff_type">Choose tariff type</string>
    <string name="radio_button_fixed_payment">Fixed Payment</string>
    <string name="radio_button_rate_payment">Rate Payment</string>
    <string name="hint_main_fee">Fee</string>
    <string name="hint_extra_fee">Extra fee</string>
    <string name="text_rate_unit">Rate unit:</string>
    <string name="text_rates_from">Rate from:</string>
    <string name="radio_button_custom_rate">Custom Rate</string>
    <string name="radio_button_db_rate">Database Rate</string>
    <string name="hint_from">from</string>
    <string name="hint_to">to</string>
    <string name="hint_more">more then</string>
    <string name="hint_unit_value">value</string>
    <string name="text_delete_rate">Delete rate</string>
    <string name="text_add_rate">Add rate</string>
    <string name="text_view_rate_updates">Rates updated:</string>
    <string name="button_rate_updates">Update</string>
    <string name="hint_discount">Discount, %</string>
    <string name="text_view_payment_frequency">Payment every</string>
    <string name="warning_extra_fee">Enter the \"Fee\" first</string>
    <string name="warning_0">Must be > 0</string>
    <string name="warning_to_more_then_from">Must be > \"From\"</string>
    <string name="warning_absent_from">\"From\" must be > 0</string>
    <string name="warning_less_then_prev_to">Must be > previous \"To\"</string>
    <string name="warning_absent_data">Enter value</string>
    <string name="period_month">month</string>
    <string name="period_day">day</string>
    <string name="period_week">week</string>
    <string-array name="period_spinner_array">
        <item>@string/period_month</item>
        <item>@string/period_day</item>
        <item>@string/period_week</item>
    </string-array>
    <string name="text_subsidy_period">Duration of subsidy:</string>
    <string name="text_granted_from">from</string>
    <string name="text_granted_to">to</string>
    <string name="text_monthly_granted">Monthly granted subsidy:</string>
    <string name="hint_mandatory_fee">Mandatory Fee</string>
    <string name="hint_social_norm">Social Norm</string>
    <string name="hint_mandatory_fee_null">* Mandatory Fee</string>
    <string name="hint_social_norm_null">* Social Norm</string>
    <string name="hint_overpayment">Overpayment</string>
    <string name="text_empty_date" translatable="false">-- / -- / --</string>
    <string name="text_date_button">Choose date</string>
    <string name="text_clear_date">Clear date</string>
    <string name="warning_dates_priority">Values of dates are wrong! \n
        \"From\" must be before \"To\"</string>
    <string name="warning_missing_date">Not all dates have been set!</string>
    <string name="text_delete_provider">Delete provider settings</string>
    <string name="text_find_provider">Find service provider</string>
    <string name="text_provider_billing_info">Service provider billing information</string>
    <string name="hint_provider_account">Settlement account</string>
    <string name="hint_provider_mfo">MFO</string>
    <string name="hint_provider_title">Service Provider</string>
    <string name="hint_provider_title_null">* Service Provider</string>
    <string name="hint_provider_address">Address</string>
    <string name="hint_provider_phone">Phone number</string>
    <string name="hint_provider_website">Website</string>
    <string name="text_user_billing_info">User information</string>
    <string name="hint_user_account">User account</string>
    <string name="hint_user_balance">Balance</string>
    <string name="mark_as_paid">Mark as paid</string>
    <string name="fragment_history_tittle">Payment History</string>
    <string name="statistic">Statistic</string>
    <string name="enter_meter_reading">Enter meter reading!</string>
    <string name="edit_service_activity_edit_text_personal_account">Personal acc.</string>
    <string name="edit_service_activity_edit_text_contract_number">Contract num.</string>
    <string name="menu_sort_new_old">new - old</string>
    <string name="menu_sort_old_new">old - new</string>
    <string name="ok" translatable="false">OK</string>
    <string name="esa_menu_delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="menu_sort_sum_1">Sum ↑</string>
    <string name="menu_sort_sum_2">Sum ↓</string>
    <string name="payment_period">Payment period</string>
    <string name="counter_data">Counter data</string>
    <string name="sum">Sum:</string>
    <string name="consumed">consumed</string>
    <string name="subsidy">Subsidy</string>
    <string name="previous">previous</string>
    <string name="current">current</string>
    <string name="flashlight">flashlight</string>
    <string name="camera">camera</string>
    <string name="enter_the_correct_date">Enter the correct date</string>
    <string name="enter_the_previous_mark">Enter the previous mark</string>
    <string name="enter_the_current_mark">Enter the current mark</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="delete_payment">Are you sure you want to delete this payment?</string>
    <string name="deleting">Deleting</string>
    <string name="attention">Attention</string>
    <string name="warning_on_close">Unsaved data will be lost. Close this window?</string>
    <string name="extra_payment">Extra payment</string>
    <string name="discount">Discount</string>
    <string name="frequency_of_payment">Frequency of payment</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="weeks">weeks</string>
    <string name="week">week</string>
    <string name="months">months</string>
    <string name="month">month</string>
    <string name="menu_payment_history_filter">filter</string>
    <string name="unpaid_bills">Unpaid bills</string>
    <string name="paid_bills">Paid bills</string>
    <string name="service_type">Service type</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="hint_content">Content</string>
    <string name="text_add">Add</string>
    <string name="new_unpaid_bills">New unpaid bills</string>
    <string name="add_image_title">Add image</string>
    <string name="gallery_intent_title">Choose a file</string>
    <string name="loading">Loading…</string>
    <string name="no_services">No services</string>
    <string name="bills">Bills</string>
    <string name="select_house">Select house</string>
    <string name="fab_menu_item_add_service">Add service</string>
    <string name="fab_menu_item_add_house">Add house</string>
    <string name="payment_amount">payment amount</string>
    <string name="no_bills">No bills</string>
    <string name="street">st.</string>
    <string name="house">house</string>
    <string name="apartment">apartment</string>
    <string name="no_paid_bills">No paid bills</string>
    <string name="rate">Rate</string>
    <string name="paid_status">PAID</string>
    <string name="unpaid_status">UNPAID</string>
    <string name="enter_the_correct_sum">Enter the correct sum</string>
    <string name="enter_the_correct_current_mark">Enter the correct current mark</string>
    <string name="enter_the_end_of_period">Enter the end of period</string>
    <string name="enter_the_start_of_period">Enter the start of period</string>
    <string name="oops" translatable="false">Oops</string>
    <string name="social_norm">Social norm</string>
    <string name="mandatory_fee">Mandatory fee</string>
    <string name="logo" translatable="false">logo</string>
</resources>