<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_subsidy_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_service_type_or_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/house_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="5dp"
            card_view:contentPadding="3dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:text="@string/text_subsidy_period"
                    android:textStyle="italic|bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="left|center_vertical"
                        android:text="@string/text_granted_from"
                        android:textColor="@color/dark_blue"
                        android:textSize="15sp"/>
                    <Button
                        android:id="@+id/button_subsidy_from_date"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="6"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/service_inner_buttons"
                        android:contentDescription="@string/text_date_button"/>
                    <ImageButton
                        android:id="@+id/button_date_from_clear"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="2"
                        android:layout_gravity="left|center_vertical"
                        android:src="@drawable/ic_action_delete_rate_interval"
                        style="?android:attr/borderlessButtonStyle"
                        android:contentDescription="@string/text_clear_date"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/text_granted_to"
                        android:textColor="@color/dark_blue"
                        android:textSize="15sp"/>
                    <Button
                        android:id="@+id/button_subsidy_to_date"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="6"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/service_inner_buttons"
                        android:contentDescription="@string/text_date_button"/>
                    <ImageButton
                        android:id="@+id/button_date_to_clear"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="2"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/ic_action_delete_rate_interval"
                        style="?android:attr/borderlessButtonStyle"
                        android:contentDescription="@string/text_clear_date"/>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wrapper_overpayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_overpayment"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:inputType="numberDecimal"
                        android:textSize="15sp"
                        android:textColor="@color/dark_blue"
                        android:textStyle="italic"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_monthly_granted"
                    android:textStyle="italic|bold"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/wrapper_subsidy_mandatory_fee"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_text_subsidy_mandatory_fee"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:textSize="15sp"
                            android:inputType="numberDecimal"
                            android:textColor="@color/dark_blue"
                            android:textStyle="italic"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/wrapper_subsidy_social_norm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_text_subsidy_social_norm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="15sp"
                            android:inputType="numberDecimal"
                            android:textColor="@color/dark_blue"
                            android:textStyle="italic"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/text_view_subsidy_necessary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="italic"
            android:textColor="@color/red_600"
            android:text="@string/text_view_necessary"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_subsidy_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_cancel"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/button_subsidy_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:text="@string/text_button_save"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>