<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/container"
android:layout_width="match_parent"
android:layout_height="wrap_content"
app:cardBackgroundColor="#ffffffff"
android:layout_margin="8dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/iv_service_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:src="@android:drawable/btn_star_big_on"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_service_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerInParent="true"
            android:text="@string/service_type"/>

        <TextView
            android:id="@+id/tv_payment_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_margin="10dp"
            android:text="@string/payment_period"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_show_receipt_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="#00ffffff"
                android:src="@drawable/ic_image_24dp"/>

            <ImageButton
                android:id="@+id/btn_start_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="#00ffffff"
                android:src="@drawable/ic_photo_camera_24dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_payment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:layout_margin="4dp"
            android:text="@string/payment_amount"/>

    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>