<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/context"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap"
            android:background="@drawable/collapsing_toolbar_bg_color"
            app:titleEnabled="false">

            <com.gigamole.infinitecycleviewpager.HorizontalInfiniteCycleViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/hicvp"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:layout_collapseMode="parallax"
                app:icvp_interpolator="@android:anim/accelerate_decelerate_interpolator"
                app:icvp_scroll_duration="250"
                app:icvp_center_page_scale_offset="30dp"
                app:icvp_min_page_scale_offset="5dp"
                app:icvp_max_page_scale="0.85"
                app:icvp_min_page_scale="0.55"
                app:icvp_medium_scaled="false"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/bg_color_white">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_services"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="10dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/empty_container"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center"
                    android:text="@string/no_services"
                    android:textAlignment="center"
                    android:textColor="@color/colorTitle"
                    android:textSize="20sp"/>
            </FrameLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="@color/colorAccentDark"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin">
        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_menu_item_add_house"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPrimaryDark"
            fab:fab_label="@string/fab_menu_item_add_house"
            fab:fab_size="mini"
            android:src="@drawable/fab_add"/>
        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_menu_item_add_service"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPrimaryDark"
            fab:fab_label="@string/fab_menu_item_add_service"
            fab:fab_size="mini"
            android:src="@drawable/fab_add"/>
    </com.github.clans.fab.FloatingActionMenu>
</android.support.design.widget.CoordinatorLayout>
